@@ -1,5 +1,7 @@
 Revision history for Module::Provision
 
+          - Added localdir config attr for M:P:TF:Debian
+
 0.40.1    2015-06-08 22:46:08
           - Added our own MetaData::Provider since PPI is *so* slow
           - Updated toolchain
